Search bar working

--- a/pokedex.html
+++ b/pokedex.html
@@ -10,26 +10,18 @@
     <script src="https://kit.fontawesome.com/337363c7bc.js" crossorigin="anonymous"></script>
     <title>PokéSearch - Find your Pokémon</title>
 </head>
-<body> 
-    <header class="mainheader">
+<body>
+    <header class="pokedexheader">
         <nav class="nav">
-               <ul class="nav-ul">
-                <li class="nav-li"><img src="img/pokeball-icon.png" alt="pokemon-icon"></li>
+            <ul class="nav-ul">
+                <li class="nav-li"><a href="index.html"><img src="img/pokeball-icon.png" alt="pokemon-icon"></a></li>
                 <li class="nav-li"><a href="pokedex.html">Pokédex</a></li>
                 <li class="nav-li">Items</li>
                 <li class="nav-li">Games</li>
                 <li class="nav-li">News</li>
             </ul>
         </nav>
-        <div class="search"> 
-            <h1 class="search-title">Find your Pokémon</h1>
-            <form action="#">
-                <input id="pokemonName" type="text" placeholder="Enter your pokémon">
-                <button id="searchBtn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-              </form>
-            </div>
     </header>
-    <section class="items"></section>
 </body>
 <script src="app.js"></script>
 </html>
