--- a/pokedex.html
+++ b/pokedex.html
@@ -22,6 +22,9 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="pokemonCollection"></section>
+    </main>
 </body>
 <script src="app.js"></script>
 </html>
