Pokemon type added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="mainheader">
         <nav class="nav">
                <ul class="nav-ul">
-                <li class="nav-li"><img src="img/pokeball-icon.png" alt="pokemon-icon"></li>
+                <li class="nav-li"><a href="index.html"><img src="img/pokeball-icon.png" alt="pokemon-icon"></a></li>
                 <li class="nav-li"><a href="pokedex.html">Pokédex</a></li>
                 <li class="nav-li">Items</li>
                 <li class="nav-li">Games</li>
